finalizado desenvovimento dos relatórios